fixed package name and migration